--- a/ui/package.json
+++ b/ui/package.json
@@ -2,12 +2,22 @@
   "name": "jukebox",
   "version": "0.0.0",
   "private": true,
+  "homepage": "/apps/jukebox",
+  "proxy": "http://localhost:8080",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
+    "dev": "sed -i.bak -e 's/compress: true/compress: false/' ./node_modules/react-scripts/config/webpackDevServer.config.js && react-app-rewired start",
+    "start": "sed -i.bak -e 's/compress: true/compress: false/' ./node_modules/react-scripts/config/webpackDevServer.config.js && react-app-rewired start",
+    "just-start": "react-app-rewired start",
+    "build": "GENERATE_SOURCEMAP=false && react-app-rewired build",
+    "eject": "react-scripts eject",
     "test": "tsc --noEmit",
     "tsc": "tsc --noEmit"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
@@ -19,17 +29,34 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.4",
+    "react-scripts": "5.0.0",
     "urbit-ob": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@urbit/vite-plugin-urbit": "^0.8.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.3.7",
+    "buffer": "^6.0.3",
     "postcss": "^8.3.9",
+    "react-app-rewired": "^2.2.1",
+    "react-router-dom": "^6.2.2",
     "tailwindcss": "^2.2.16",
-    "typescript": "^4.3.2",
-    "vite": ">=2.9.13"
+    "typescript": "^4.3.2"
+  },
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
